# fel

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  clang.sh  doxygen.ini  language.md  todo.md
.github/workflows/: coverage-coveralls.yml  linux.yml  macos.yml  windows.yml
apps/cli/: CMakeLists.txt  main.cc
cli/: main.cc
cmake/: CompilerWarnings.cmake  Defines.cmake  StandardProjectSettings.cmake
data/examples/: helloworld.fel  old-spec-or-goal.fel  v-next.fel  v1.fel
editors/vscode/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
editors/vscode/src/: extension.ts
editors/vscode/syntaxes/: fel.tmLanguage.json
examples/: helloworld.fel  spec.fel
extras/editors/vscode/: CHANGELOG.md  language-configuration.json  package-lock.json
fel/: ast.cc  ast.h  ast_printer.cc  ast_printer.h  file.h  interpreter.cc  interpreter.h  lexer.cc  lexer.h  location.h  log.cc  log.h  object.cc  object.h  parser.cc  parser.h  preproc.h  where.h
libs/: CMakeLists.txt
libs/fel/src/: CMakeLists.txt
libs/fel/src/fel/: ast.cc  ast.h  ast_printer.cc  ast_printer.h  file.cc  file.h  interpreter.cc  lexer.cc  lexer.test.cc  location.cc  location.h  log.cc  object.h  parser.cc  where.cc
libs/lsp/src/: CMakeLists.txt
libs/lsp/src/lsp/: lsp.cc  lsp.h  lsp.test.cc
logger/: logger.cc  logger.h
lsp/: lsp.cc  lsp.h  str.cc  str.h
src/: ast.cc  ast.h  bytecode.cc  bytecode.h  context.cc  context.h  fel.c  fel.cc  fel.h  felparser.h  felparserstate.cc  felparserstate.h  file.cc  file.h  lexer.cc  lexer.h  lexer.l  location.cc  location.h  log.cc  log.h  main.c  main.cc  parser.cc  parser.h  parser.y  preproc.h  str.h  test.cc  testbytecode.cc  value.cc  value.h
test/: comments.cc  falsestring.cc  falsestring.h  strings.cc  test.cc  test_bytecode.cc  test_lexer.cc  test_lsp.cc  test_parser.cc
